Constraintprog/minizinc-1.6/tests/type-inst-checking/flatzinc/f-items-bad.exp
f-items-bad.fzn:2:
  type-inst error: initialisation value for `pi' has invalid type-inst: expected 
  `int', actual `bool'
f-items-bad.fzn:6:
  symbol error: `show' undeclared
f-items-bad.fzn:8:
  type-inst error: maximize expression has invalid type-inst: expected `var int' 
  or `var float', actual `var bool'
% -- pretty-print after type-inst-checking --------------
int: pi = true;

var int: vi;

var bool: vb;

constraint show(vb);

solve maximize vb;
